fixed overflow issue

--- a/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
+++ b/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
@@ -10,7 +10,6 @@
 
 .modal-card-body {
   padding: 15px !important;
-  overflow: visible;
 }
 
 @media screen and (min-width: 769px) {
